scripts/nullness/annotator/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8.txt
../annotator/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/RpgObject.java:27: error: [return] incompatible types in return.
        return stats;
               ^
  type of expression: @Initialized @Nullable Stats
  method return type: @Initialized @NonNull Stats
../annotator/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/RpgObject.java:45: error: [return] incompatible types in return.
            return null;
                   ^
  type of expression: null (NullType)
  method return type: @Initialized @NonNull Boolean
../annotator/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/Skill.java:20: error: [initialization.fields.uninitialized] the constructor does not initialize fields: name, damage, recovery
    public Skill(EffectType type) {
           ^
../annotator/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/Stats.java:42: error: [return] incompatible types in return.
        return hp;
               ^
  type of expression: @Initialized @Nullable Long
  method return type: @Initialized @NonNull Long
../annotator/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/item/Item.java:18: error: [method.invocation] call to setEquipable(java.lang.Boolean) not allowed on the given receiver.
        setEquipable(false);
                    ^
  found   : @UnderInitialization(org.nerv.rpgclient.item.Item.class) @NonNull Item
  required: @Initialized @NonNull Item
../annotator/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/player/Player.java:21: error: [return] incompatible types in return.
        return job;
               ^
  type of expression: @Initialized @Nullable Job
  method return type: @Initialized @NonNull Job
../annotator/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/player/Player.java:50: error: [argument] incompatible argument for parameter status of RpgObject.setStatus.
        if(skill.getStatusEffect() != null) target.setStatus(skill.getStatusEffect());
                                                                                  ^
  found   : @Initialized @Nullable Status
  required: @Initialized @NonNull Status
7 errors
